--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -174,6 +174,11 @@
     <Compile Include="Car\IHisStoreStockAppService.cs" />
     <Compile Include="Car\IRepairCostAppService.cs" />
     <Compile Include="Car\RepairCostAppService.cs" />
+    <Compile Include="Finance\Dto\VoucherAuditEditDto.cs" />
+    <Compile Include="Finance\Dto\VoucherAuditListDto.cs" />
+    <Compile Include="Finance\Dto\VoucherAuditQueryDto.cs" />
+    <Compile Include="Finance\IVoucherAuditAppService.cs" />
+    <Compile Include="Finance\VoucherAuditAppService.cs" />
     <Compile Include="Storage\Dto\DeliveryBillQueryDto.cs" />
     <Compile Include="Tasks\DailyTask.cs" />
     <Compile Include="Tasks\Yearly.cs" />
