--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -184,6 +184,16 @@
     <Compile Include="Finance\InvoiceCheckAppService.cs" />
     <Compile Include="Finance\IVoucherAuditAppService.cs" />
     <Compile Include="Finance\VoucherAuditAppService.cs" />
+    <Compile Include="Purchase\Dto\PlanWithBudgetOutlayEditDto.cs" />
+    <Compile Include="Purchase\Dto\PlanWithBudgetOutlayListDto.cs" />
+    <Compile Include="Purchase\Dto\PlanWithBudgetOutlayQueryDto.cs" />
+    <Compile Include="Purchase\Dto\ProcurementPlanEditDto.cs" />
+    <Compile Include="Purchase\Dto\ProcurementPlanListDto.cs" />
+    <Compile Include="Purchase\Dto\ProcurementPlanQueryDto.cs" />
+    <Compile Include="Purchase\IPlanWithBudgetOutlayAppService.cs" />
+    <Compile Include="Purchase\IProcurementPlanAppService.cs" />
+    <Compile Include="Purchase\PlanWithBudgetOutlayAppService.cs" />
+    <Compile Include="Purchase\ProcurementPlanAppService.cs" />
     <Compile Include="Storage\Dto\DeliveryBillQueryDto.cs" />
     <Compile Include="Tasks\DailyTask.cs" />
     <Compile Include="Tasks\Yearly.cs" />
