--- a/TAF.Application/packages.config
+++ b/TAF.Application/packages.config
@@ -13,12 +13,18 @@
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net46" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net46" />
   <package id="NPOI" version="2.3.0" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Quartz" version="2.5.0" targetFramework="net46" />
   <package id="sharpconfig" version="3.1.0" targetFramework="net46" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
