--- a/TAF.Web/SCBF.Web.csproj
+++ b/TAF.Web/SCBF.Web.csproj
@@ -825,6 +825,7 @@
     <Content Include="Views\CarOil\carOil.js" />
     <Content Include="Views\InvoiceCheck\invoiceCheck.js" />
     <Content Include="Views\ProcurementPlan\procurementPlan.js" />
+    <Content Include="Views\Purchase\poolConfig.js" />
     <Content Include="Views\StageInfoe\stageInfoe.js" />
     <Content Include="Views\ApplyForVehicleMaintenance\vehicleMaintenanceReport.js" />
     <Content Include="Views\ApplicationForBunkerB\applicationForBunkerBSummaryList.js" />
@@ -1077,6 +1078,7 @@
     <Content Include="Views\InvoiceCheck\_InvoiceCheckIndex.cshtml" />
     <Content Include="Views\ProcurementPlan\_ProcurementPlanIndex.cshtml" />
     <Content Include="Views\StageInfoe\_StageInfoeIndex.cshtml" />
+    <Content Include="Views\Purchase\_PoolConfig.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
