--- a/TAF.Application/SCBF.Application.csproj
+++ b/TAF.Application/SCBF.Application.csproj
@@ -174,6 +174,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseInfo\AttachmentAppService.cs" />
+    <Compile Include="BaseInfo\Dto\UnitPoolEditDto.cs" />
+    <Compile Include="BaseInfo\Dto\UnitPoolListDto.cs" />
+    <Compile Include="BaseInfo\IUnitPoolAppService.cs" />
+    <Compile Include="BaseInfo\UnitPoolAppService.cs" />
     <Compile Include="Car\ApplyForVehicleMaintenanceAppService.cs" />
     <Compile Include="Car\CarOilAppService.cs" />
     <Compile Include="Car\Dto\CarOilReportDto.cs" />
