--- a/TAF.Core/SCBF.Core.csproj
+++ b/TAF.Core/SCBF.Core.csproj
@@ -109,7 +109,9 @@
     <Compile Include="BaseInfo\Attachment.cs" />
     <Compile Include="BaseInfo\IAttachmentRepository.cs" />
     <Compile Include="BaseInfo\IModuleIdAttachmentRepository.cs" />
+    <Compile Include="BaseInfo\IUnitPoolRepository.cs" />
     <Compile Include="BaseInfo\ModuleIdAttachment.cs" />
+    <Compile Include="BaseInfo\UnitPool.cs" />
     <Compile Include="Car\ApplicationForBunkerA.cs" />
     <Compile Include="BaseInfo\AuditingStatus.cs" />
     <Compile Include="Car\ApplicationForBunkerB.cs" />
